--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -8,13 +8,59 @@ body {
 	height: 100%;
 	position: fixed;
 	z-index: 5;
-	overflow-y: scroll;
+	overflow: hidden;
+}
+
+#ui-right-panel {
+    display: flex;
+    flex-direction: column-reverse;
+    position: absolute;
+    width: 30%;
+    height: 95%;
+    right: 20px;
+    bottom: 0px;
+    justify-content: flex-start;
+    align-content: stretch;
 }
 
 #menu {
 	width: 100%;
-	position: fixed;
 	background: #fff;
+}
+
+#explore-container {
+	margin-top: 30px;
+	margin-left: 20px;
+	height: 100%;
+	/*overflow: auto;*/
+}
+
+#explore-table-container::-webkit-scrollbar { width: 0 !important; }
+#explore-table-container { overflow: -moz-scrollbars-none; }
+
+#explore-table-container {
+	margin-top: 10px;
+	margin-bottom: 10px; /* why doesn't this work? */
+	width: 20%;
+	height: 80%;
+	overflow: scroll;
+}
+
+#explore-container .btn-group {
+	color: black;
+}
+
+#explore-container .btn {
+	margin-right: 10px;
+}
+
+#explore-container .btn::first-letter {
+	color: black;
+}
+
+
+#explore-container .btn::first-letter:hover {
+	color: inherit;
 }
 
 #journal {
@@ -27,15 +73,115 @@ body {
 	z-index: 10;
 }
 
-.table {
-	margin: auto;
-	width: 80%;
-	margin-top: 100px;
-	background: rgba(0, 0, 0, 0.7);
-	pointer-events: none;
+#exploring-star-name {
+	margin-bottom: 10px;
+	font-size: 30px;
+}
 
+/* STAR STATS */
+
+#star-stats {
+	order: 3;
+	text-align: right;
+	margin-bottom: 10px;
+}
+
+/* LOG */
+
+#llog {
+	order: 2;
+	flex-grow: 2;
+	width: 100%;
+	padding: 10px;
+	background-color: rgba(0, 0, 0, 0.7);
+	margin-bottom: 20px;
+	overflow-y: scroll;
+}
+
+#llog::-webkit-scrollbar { width: 0 !important }
+
+#llog span {
+	display: inline-block;
+	overflow: -moz-scrollbars-none; 
+}
+
+/* CHATTING */
+
+#chat {
+	order: 1;
+	/*position: absolute;*/
+	display: flex;
+	flex-direction: column;
+	/*width: 30%;*/
+	height: 50%;
+	background-color: rgba(0, 0, 0, 0.7);
+	border: 1px solid white;
+	margin-bottom: 20px;
+	/*right: 20px;*/
+	/*bottom: 20px;*/
+}
+
+#chat-star-name {
+	width: 100%;
+	height: 50px;
+	border: 1px solid white;
+	font-size: 25px;
+	display: flex;
+    align-items: center;
+}
+
+#chat-star-name:nth-child(1) {
+	padding-left: 10px;
+}
+
+#chat-body {
+	display: flex;
+	flex-direction: column;
+	overflow-y: scroll;
+	height: 100%;
+}
+
+#chat-input {
+	background-color: rgba(0, 0, 0, 0.5);
+	padding: 10px;
+	resize: vertical;
+}
+
+#chat-input::-webkit-scrollbar { width: 0 !important }
+#chat-input { overflow: -moz-scrollbars-none; }
+
+.chat-message {
+	box-sizing: content-box;
+	-webkit-box-sizing: content-box;
+	overflow-wrap: break-word;
+	max-width: 80%;
+	padding: 10px;
+	margin: 10px;
+}
+
+.chat-me {
+	align-self: flex-end;
+	background-color: rgba(255, 255, 255, 0.5);
+}
+
+.chat-them {
+	align-self: flex-start;
+	border: 1px solid white;
+}
+
+.table {
+	width: 80%;
+	background: rgba(0, 0, 0, 0.7);
 }
 
 .hide {
 	display: none;
+}
+
+.dead {
+	background-color: rgba(255, 0, 0, 0.5)
+}
+
+.alive {
+
 }
