--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -13,28 +13,43 @@ body {
 
 #ui-flex {
 	display: flex;
-	justify-content: flex-left;
+	justify-content: space-between;
 	width: 100%;
 	height: 100%;
-}
-
-#ui-right-panel {
-    display: flex;
-    flex-direction: column-reverse;
-    position: absolute;
-    width: 30%;
-    height: 95%;
-    right: 20px;
-    bottom: 0px;
-    justify-content: flex-start;
-    align-content: stretch;
 }
 
 #ui-left-panel {
 	margin-top: 30px;
 	margin-left: 20px;
 	height: 100%;
-	min-width: 250px;
+	min-width: 220px;
+}
+
+#ui-right-panel {
+    display: flex;
+    flex-direction: column-reverse;
+  /*  position: absolute;
+    width: 30%;
+    height: 95%;
+    right: 20px;
+    bottom: 0px;*/
+    max-width: 375px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    justify-content: flex-start;
+    align-content: stretch;
+}
+
+#ui-middle-panel {
+	margin-right: 35px;
+	height: 100%;
+}
+
+#middle-container {
+	height: 90%;
+	background-color: rgba(0, 0, 0, 0.7);
+	margin-bottom: 40px;
 }
 
 #menu {
@@ -74,7 +89,7 @@ body {
 	color: inherit;
 }
 
-#journal {
+/*#journal {
 	margin: auto;
 	width: 80%;
 	margin-top: 100px;
@@ -82,7 +97,19 @@ body {
 	border: 1px solid white;
 	padding: 30px;
 	z-index: 10;
+}*/
+
+#journal {
+	overflow-y: scroll;
+	height: 100%;
+	margin-top: 40px;
+	z-index: 10;
+	padding: 15px;
+	border: 1px solid #bbb;
 }
+
+#journal::-webkit-scrollbar { width: 0 !important; }
+#journal { overflow: -moz-scrollbars-none; }
 
 #exploring-star-name {
 	margin-bottom: 10px;
@@ -128,13 +155,14 @@ body {
 	background-color: rgba(0, 0, 0, 0.7);
 	border: 1px solid white;
 	margin-bottom: 20px;
+	max-height: 500px;
 	/*right: 20px;*/
 	/*bottom: 20px;*/
 }
 
 #chat-star-name {
 	width: 100%;
-	height: 50px;
+	height: 100px;
 	border: 1px solid white;
 	font-size: 25px;
 	display: flex;
